updating scripts in package.json
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "node": "node",
-    "postinstall": "npm run webdriver:update",
+    "postinstall": "ng build --prod",
+    "postinstall-webdriver": "npm run webdriver:update",
     "postversion": "git push && git push --tags",
     "preclean:install": "npm run clean",
     "preversion": "npm test",
@@ -64,7 +65,8 @@
     "server": "npm run server:dev",
     "start:prod:hmr": "cross-env ANGULAR_CONF_FILE=./config.prod.json npm run server:dev:hmr",
     "start:hmr": "npm run server:dev:hmr",
-    "start": "npm run server:dev",
+    "start:dev": "npm run server:dev",
+    "start": "node server.js",
     "start:aot": "npm run server:aot:dev",
     "test": "npm run lint && karma start",
     "test:sonar": "npm run lint && cross-env SONAR_QUBE=1 karma start",
