--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@angular/platform-server": "^5.2.10",
     "@angular/router": "^5.2.10",
     "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
+    "@sendgrid/mail": "^6.2.1",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
@@ -108,6 +109,8 @@
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
     "jquery": "^3.3.1",
+    "mysql": "^2.15.0",
+    "ngx-smart-modal": "^6.0.0",
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
     "reflect-metadata": "^0.1.12",
