--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "core-js": "^2.5.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "file-base64": "^1.0.0",
+    "file-system": "^2.2.2",
     "font-awesome": "^4.7.0",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
