--- a/config/config.prod.json
+++ b/config/config.prod.json
@@ -7,5 +7,5 @@
     "storageBucket": "XXXXXX.appspot.com",
     "messagingSenderId": "000000000000"
   },
-  "gtmKey" : "GTM-XXXXXXX"
+  "gtmKey" : "GTM-5CHJ8Z5"
 }
