--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "jquery": "^3.3.1",
     "mysql": "^2.15.0",
     "ngx-smart-modal": "^6.0.0",
+    "ngx-toastr": "^8.7.3",
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
     "reflect-metadata": "^0.1.12",
