--- a/package.json
+++ b/package.json
@@ -97,6 +97,11 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/platform-server": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "@fortawesome/angular-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@ngx-share/core": "^5.3.1",
     "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
     "@sendgrid/mail": "^6.2.1",
     "angular-font-awesome": "^3.1.2",
@@ -104,6 +109,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.5",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "file-base64": "^1.0.0",
     "file-system": "^2.2.2",
