Updating site description in config.common.json
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/config/config.common.json
+++ b/config/config.common.json
@@ -1,4 +1,4 @@
 {
   "title": "Aqueduct.ai",
-  "description": "Aqueduct.ai uses machine learning to help Public Water Systems to find non-revenue water leaks faster and determine the likelihood of asset failure, helping water utilities save money and reduce risks."
+  "description": "Aqueduct uses machine learning to help water utilities and wastewater treatment facilities reduce risk and increase efficiency."
 }
