--- a/package.json
+++ b/package.json
@@ -104,16 +104,20 @@
     "@ngx-share/core": "^5.3.1",
     "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
     "@sendgrid/mail": "^6.2.1",
+    "@types/animejs": "^2.0.1",
     "angular-font-awesome": "^3.1.2",
+    "animejs": "^3.0.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.5",
     "cors": "^2.8.4",
+    "d3": "^5.9.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "file-base64": "^1.0.0",
     "file-system": "^2.2.2",
     "font-awesome": "^4.7.0",
+    "gsap": "^2.0.2",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
     "jquery": "^3.3.1",
@@ -124,6 +128,7 @@
     "popper.js": "^1.14.3",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.10",
+    "three": "^0.101.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -132,6 +137,7 @@
     "@angular/language-service": "^5.2.10",
     "@compodoc/compodoc": "^1.1.2",
     "@ngtools/webpack": "1.10.0",
+    "@types/d3": "^5.7.0",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.8.6",
     "@types/node": "^9.6.5",
